@@ -68,12 +68,12 @@
     ),
     'phpmailer/phpmailer' => 
     array (
-      'pretty_version' => 'v6.5.1',
-      'version' => '6.5.1.0',
+      'pretty_version' => 'v6.5.3',
+      'version' => '6.5.3.0',
       'aliases' => 
       array (
       ),
-      'reference' => 'dd803df5ad7492e1b40637f7ebd258fee5ca7355',
+      'reference' => 'baeb7cde6b60b1286912690ab0693c7789a31e71',
     ),
     'symfony/polyfill-mbstring' => 
     array (
@@ -86,12 +86,12 @@
     ),
     'tecnickcom/tc-lib-barcode' => 
     array (
-      'pretty_version' => '1.17.6',
-      'version' => '1.17.6.0',
+      'pretty_version' => '1.17.7',
+      'version' => '1.17.7.0',
       'aliases' => 
       array (
       ),
-      'reference' => 'a8a7183e2be6379e522dc825a3b7a3af5394a9e7',
+      'reference' => '5975807c1cc9d9b50377529f22a4fdb435e75b6a',
     ),
     'tecnickcom/tc-lib-color' => 
     array (
