@@ -1,6 +1,7 @@
 CHANGE LOG: NUKEVIET CMS
 http://nukeviet.vn
 NUKEVIET 4.6.00
+- System package updates: phpmailer (v6.5.1 => v6.5.3), tecnickcom/tc-lib-barcode (1.17.6 => 1.17.7)
 - System package addition: tecnickcom/tc-lib-barcode (v1.17.6)
 - System package updates: polyfill-mbstring (v1.23.0 => v1.18.1, for PHP ^5.6 support), phpmailer/phpmailer (v6.5.0 => v6.5.1)
 - System package removal: symfony/options-resolver, endroid/qrcode
